<resources>
    <string name="app_name">Mirai Vizion</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in_with">Sign In with</string>
    <string name="lbl_forgot">Forgot ?</string>
    <string name="lbl_already_have_a_account">Already have a account?</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to-</string>
    <string name="lbl_tep_email">youremail@gmail.com</string>
    <string name="lbl_did_not_receive">Didn\'t receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_hi_we_re_woobox">Hi, We\'re Mirai Technologies!</string>
    <string name="lbl_subheading">We make around your city Affordable, easy and efficient.</string>
    <string name="lbl_my_order">My Order</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">Wishlist</string>
    <string name="lbl_upload_banner" translatable="false">Upload</string>
    <string name="lbl_women">Women</string>
    <string name="lbl_men">Men</string>
    <string name="lbl_kids">Kids</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_newest_product">Available Templates</string>
    <string name="lbl_recent_search">Recent Template</string>
    <string name="lbl_top_selling">Top Selling</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_offers">Offers</string>
    <string name="lbl_deal">Deal</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_you_may_like">You May Like</string>
    <string name="lbl_mens">Mens</string>
    <string name="lbl_womens">Womens</string>
    <string name="lbl_electronic">Electronic</string>
    <string name="lbl_optic">Optic</string>
    <string name="lbl_bags">Bags</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Create Your Ads</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_check_availability">Check Availability</string>
    <string name="lbl_delivery_by">Delivery By</string>
    <string name="lbl_free">Free</string>
    <string name="lbl_brand">Start Date</string>
    <string name="lbl_colour">End Date</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_clouser">Start Time</string>
    <string name="lbl_lace_ups">Range</string>
    <string name="lbl_pattern">End Time</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_80">80</string>
    <string name="lbl_4">4</string>
    <string name="lbl_70">70</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_50">50</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_more">More</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_colors">Target Gender</string>
    <string name="rs">\u20B9</string>
    <string name="lbl_size">Target Age Range</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_less">Less</string>
    <string name="lbl_delivered_on">Delivered on</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_item_price">Item Price -</string>
    <string name="lbl_offer">Offer -</string>
    <string name="lbl_shipping_charge">Shipping Charge -</string>
    <string name="lbl_total_amount">Total Amount -</string>
    <string name="lbl_payment_method">Payment Method -</string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_order_date">Order Date -</string>
    <string name="lbl_give_ratings">Give Rating</string>
    <string name="lbl_rate_5">/5</string>
    <string name="lbl_delivery_status">Your Advertisement has been Published</string>
    <string name="lbl_return_replace"><![CDATA[Return & Replace]]></string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_delivered_by">Delivery By,</string>
    <string name="lbl_change_address">Change Address</string>
    <string name="lbl_item_deliver_here">Item Deliver Here</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_add_address">Add New Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Pay with PayPal</string>
    <string name="lbl_net_banking">Net Banking</string>
    <string name="lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="lbl_other_wallet">Other Wallet</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_new_arrival">New Arrival</string>
    <string name="lbl_popular">Popular</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">Special Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_verify_now">Verify now</string>
    <string name="lbl_get_newest_offers">and advertise in a smart way </string>
    <string name="lbl_please_verify_your_email_or_number">Please verify your Email</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_move_to_cart">Move to Cart</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_cloths">Cloths</string>
    <string name="lbl_60">60</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_Accessories">Accessories</string>
    <string name="lbl_footwear">Footwear</string>
    <string name="lbl_order_pending">Order Pending</string>
    <string name="lbl_choose_item">Choose an item</string>
    <string name="lbl_tabDescription">Description</string>
    <string name="lbl_tab_more_info">More info</string>
    <string name="lbl_tabReviews">Reviews</string>
    <string name="lbl_qty">Qty:</string>
    <string name="lbl_see_price_detail">See Price Detail</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_work_address">Work Address</string>
    <string name="lbl_remove_cart">Remove cart</string>
    <string name="lbl_tap_to_retry">Tap to retry</string>
    <string name="lbl_sign_up_success">Sign up success</string>
    <string name="lbl_successfully_signed_in">Successfully signed in</string>
    <string name="lbl_logout_confirmation">Are you want to logout?</string>
    <string name="lbl_dialog_title">Confirmation</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no">NO</string>
    <string name="lbl_max">Max</string>
    <string name="lbl_min">Min</string>
    <string name="lbl_order">order</string>
    <string name="lbl_sign_up_with">Sign up with</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_please_wait">Please Wait</string>
    <string name="msg_walkHeading1">Hi, We\'re NightowlDevelopers!</string>
    <string name="msg_walkHeading2">Most Unique Styles!</string>
    <string name="msg_walkHeading3">Shop Till You Drop!</string>
    <string name="msg_walkSubHeading2">Shop the most trending fashion on the biggest shopping website.</string>
    <string name="msg_walkSubHeading3">Grab the best seller pieces at bargain prices.</string>
    <string name="msg_walkSubHeading1">We make around your city Affordable,\n easy and efficient.</string>
    <string name="msg_confirmation">Are you sure you want to delete?</string>
    <string name="msg_want_to_order">Are you sure you want to order now?</string>
    <string name="error_no_internet">Oops!! You Are Not Connected To Internet</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_pwd_digit_required">Maximum 6 digit Required</string>
    <string name="error_enter_valid_email">Enter Valid Email</string>
    <string name="error_password_not_matches">Password not matches</string>
    <string name="error_old_password_not_matches">Old password not matches</string>
    <string name="error_new_password_same">Your old password is same please use another password</string>
    <string name="error_gps_not_enabled">GPS location is not enabled.</string>
    <string name="error_something_went_wrong">Please try again later</string>
    <string name="error_permission_required">Location Permission Required</string>
    <string name="error_address_type">Please Select Address Type</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_full_name">Full Name*</string>
    <string name="hint_address">Address</string>
    <string name="hint_state">State</string>
    <string name="hint_address_type">Address Type</string>
    <string name="hint_city">City</string>
    <string name="hint_pin_code">Pin code</string>
    <string name="hint_mobile_no">Phone number</string>
    <string name="text_collection_2019">Collection 2019</string>
    <string name="text_start_to_shopping">Start Creating</string>
    <string name="text_todo">TODO</string>
    <string name="text_juliane_deerman">Juliane Deerman</string>
    <string name="title_account">My Account</string>
    <string name="title_reward">My Rewards</string>
    <string name="title_payment">Payments</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_Confirmation">Confirmation</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="lbl_quick_pay">Quick Pay</string>
    <string name="font_bold" translatable="false">fonts/Montserrat-Bold.ttf</string>
    <string name="lbl_country">Country</string>
    <string name="miraivizion_com">miraivizion.com</string>
</resources>