<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ConfirmationActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finalAmount"
        android:layout_below="@+id/appBar"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:layout_marginBottom="@dimen/_100sdp"
        android:paddingBottom="@dimen/spacing_standard_new">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_standard_new"
                        android:layout_marginTop="19.5dp"
                        android:layout_marginEnd="@dimen/spacing_standard_new"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/mytrip"
                            android:layout_width="18dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/ic_launcher_round"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/miraivizion_com"
                            android:textAppearance="@dimen/font_size_small"
                            android:textColor="@color/twitter_blue"
                            android:textSize="12.5sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/spacing_standard_new"
                        android:layout_marginTop="13.8dp"
                        android:layout_marginEnd="@dimen/spacing_standard_new"
                        android:background="@color/lightgray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_standard_new"
                            android:layout_weight="1"
                            android:text="Advertisement :"
                            android:textAppearance="@dimen/font_size_normal"
                            android:textColor="@color/blacklight"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:layout_marginTop="3.8dp"
                            android:text="Start Date: Tue, 18 Aug 2020"
                            android:textAppearance="@dimen/font_size_medium"
                            android:textColor="@color/blacklight"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:layout_marginTop="3.8dp"
                            android:text="End Date : Wed, 19 Aug 2020"
                            android:textAppearance="@dimen/font_size_medium"
                            android:textColor="@color/blacklight"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/spacing_standard_new"
                        android:layout_marginTop="13.8dp"
                        android:layout_marginEnd="@dimen/spacing_standard_new"
                        android:background="@color/lightgray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_standard_new"
                            android:layout_weight="1"
                            android:text="Preferred Details:"
                            android:textAppearance="@dimen/font_size_normal"
                            android:textColor="@color/blacklight"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:layout_marginTop="3.8dp"
                            android:text="Gender      : Female"
                            android:textAppearance="@dimen/font_size_medium"
                            android:textColor="@color/blacklight"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:layout_marginTop="3.8dp"
                            android:text="Age Group: 18-24"
                            android:textAppearance="@dimen/font_size_medium"
                            android:textColor="@color/blacklight"
                            android:textSize="13sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7.8dp"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/spacing_standard_new"
                            android:layout_marginTop="13.8dp"
                            android:layout_marginEnd="@dimen/spacing_standard_new"
                            android:background="@color/lightgray" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.5dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_standard_new"
                            android:layout_weight="1"
                            android:text="Preferred Gender: Female"
                            android:textAppearance="@dimen/font_size_normal"
                            android:textColor="@color/blacklight"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/spacing_standard_new"
                        android:layout_marginTop="13.8dp"
                        android:layout_marginEnd="@dimen/spacing_standard_new"
                        android:background="@color/lightgray"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="15.2dp"
                android:background="@color/gray_80" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:src="@drawable/ic_baseline_screen_24" />

                <TextView
                    android:id="@+id/screenCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14.5dp"
                    android:layout_weight="1"
                    android:text="Selected Screens (2)"
                    android:textAppearance="@string/font_bold"
                    android:textColor="@color/blacklight"
                    android:textSize="@dimen/font_size_xlarge" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvScreens"
                style="@style/RecycleView"
                android:layout_width="match_parent"
                android:overScrollMode="never"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard_new" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/gray_80" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tPayBtn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dotted_line_rect"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/lbl_total_amount"
            android:textAppearance="@dimen/font_size_normal"
            android:textColor="@color/blacklight"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/finalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="₹ 100"
            android:textAppearance="@style/FontBold"
            android:textColor="@color/blacklight"
            android:textSize="12.5sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tPayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect_blue_cornor"
        android:elevation="1.5dp"
        android:padding="12.5dp"
        android:text="@string/lbl_quick_pay"
        android:textAlignment="center"
        android:textAppearance="@dimen/font_size_large"
        android:textColor="@color/white"
        android:textSize="13.5sp" />

</RelativeLayout>